force-app/main/default/objects/Shoes__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
                <default>true</default>
                <label>Men</label>
            </value>
            <value>
                <fullName>Woman</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>