force-app/main/default/objects/Shoes__c/fields/Price_Max__c.field-meta.xml
<CustomField>
    <fullName>Price_Max__c</fullName>
    <label>Price Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>