force-app/main/default/objects/Shoes__c/fields/View_Page__c.field-meta.xml
<CustomField>
    <fullName>View_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Page</label>
    <type>Checkbox</type>
</CustomField>